--- a/src/components/weatherList/WeatherList.module.css
+++ b/src/components/weatherList/WeatherList.module.css
@@ -4,12 +4,12 @@
     overflow: auto;
     padding: 5px 0;
     & .weatherIcon {
-        font-size: 3rem;
+        font-size: 2.5rem;
         color: rgb(40, 210, 240);
     }
     & div {
         text-align: center;
-        padding: 0 5px;
+        padding: 5px 10px;
         text-wrap: nowrap;
     }
 }
