--- a/src/components/cityList/CityList.module.css
+++ b/src/components/cityList/CityList.module.css
@@ -30,6 +30,15 @@
     overflow-y: auto;
 }
 
+.loadingBlock {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: var(--width-size);
+    border-radius: 3px;
+    box-shadow: 0 0 1px 1px rgba(156, 156, 156, 0.1);
+}
+
 .addSity {
     display: flex;
     flex-direction: column;
@@ -68,7 +77,6 @@
     width: 100%;
     max-width: var(--width-size);
     min-height: var(--width-size);
-    background-color: yellow;
     & img {
         width: 100%;
         height: 100%;
@@ -117,9 +125,9 @@
 .search {
     font-size: 1.2rem;
     & select {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
         outline: none;
-        padding: 0 5px 0 0;
+        padding: 5px 10px 5px 5px;
         color: #9c9c9c;
         border: none;
     }
