--- a/src/components/modalWindow/ModalWindow.module.css
+++ b/src/components/modalWindow/ModalWindow.module.css
@@ -7,7 +7,7 @@
     inset: 50%;
     transform: translate(-50%, -50%);
     background-color: #fff;
-    border-radius: 2px;
+    border-radius: 3px;
     box-shadow: 0 0 30px 2px rgba(110, 110, 110, 0.459);
 }
 
@@ -62,6 +62,11 @@
     outline: none;
     border-radius: 2px;
     border: 1px solid rgba(180, 180, 180, 0.61);
+}
+
+.error {
+    background-color: rgb(241, 117, 117);
+    padding: 5px;
 }
 
 .buttons {
