--- a/src/blocks/cityList/CityList.module.css
+++ b/src/blocks/cityList/CityList.module.css
@@ -5,7 +5,7 @@
     outline: none;
     border-radius: 5px;
     padding: 10px 0 10px 2rem;
-    background-color: #e6f7ff;
+    background-color: var(--aqua-color);
     font-size: 1.2rem;
 }
 
@@ -46,62 +46,12 @@
     align-items: center;
     min-width: var(--width-size);
     height: var(--width-size);
-    background-color: #e6f7ff;
+    background-color: var(--aqua-color);
     margin: 10px 0 0 1rem;
-}
-
-.tripCity {
-    display: flex;
-    flex-direction: column;
-    min-width: var(--width-size);
-    border-radius: 3px;
-    box-shadow: 0 0 1px 1px rgba(156, 156, 156, 0.1);
-}
-
-.tripDescription {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 10px;
-    height: 100%;
-    font-size: 0.8rem;
-    padding: 5px;
-    max-width: 150px;
 }
 
 .fromTo {
     color: #9c9c9c;
-}
-
-.cityImage {
-    width: 100%;
-    max-width: var(--width-size);
-    min-height: var(--width-size);
-    & img {
-        width: 100%;
-        height: 100%;
-    }
-}
-
-.selected {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: var(--width-size);
-    border-radius: 3px;
-    box-shadow: 0 0 5px 3px rgba(35, 10, 179, 0.1);
-    & .cross {
-        position: absolute;
-        top: 0px;
-        right: 5px;
-        font-size: 1.2rem;
-        color: red;
-        border-radius: 50%;
-        cursor: pointer;
-        &:hover {
-            transform: scale(1.1, 1.1);
-        }
-    }
 }
 
 .buttons {
@@ -111,7 +61,7 @@
         padding: 5px 10px;
         border: none;
         border-radius: 3px;
-        background-color: #e6f7ff;
+        background-color: var(--aqua-color);
     }
 }
 
