--- a/src/pages/MainPage.module.css
+++ b/src/pages/MainPage.module.css
@@ -7,7 +7,6 @@
 }
 
 .mainSection {
-    --width-size: 200px;
     display: flex;
     flex-direction: column;
     gap: 3rem;
@@ -15,6 +14,9 @@
     width: 65%;
     & p {
         font-size: 1.4rem;
+        & strong {
+            font-weight: 700;
+        }
     }
 }
 
@@ -23,13 +25,68 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 4rem;
+    font-size: 3rem;
     top: 1rem;
     right: 2rem;
-    width: 4rem;
-    height: 4rem;
-    background-color: #35cfda;
+    width: 3rem;
+    height: 3rem;
+    background-color: var(--aqua-color);
     clip-path: circle(50%);
+    cursor: pointer;
+}
+
+.isAuth {
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
+    color: white;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    cursor: pointer;
+    z-index: 100;
+    & .innerAuth {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        background-color: rgb(26, 1, 66);
+        z-index: 100;
+    }
+    & .userAvatar {
+        width: 3rem;
+        height: 3rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 2rem;
+        background-color: var(--aqua-color);
+        color: black;
+        clip-path: circle(50%);
+    }
+    &:hover > .logout {
+        top: 3.1rem;
+        transition: all 0.2s;
+    }
+    & .logout {
+        position: absolute;
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        background-color: var(--aqua-color);
+        color: black;
+        border-radius: 3px;
+        z-index: 90;
+        top: 1rem;
+        padding: 5px;
+        transition: all 0.2s;
+        & div {
+            background: url(../assets/logout_FILL0_wght400_GRAD0_opsz24.png) no-repeat;
+            background-position: center;
+            width: 1rem;
+            height: 1rem;
+        }
+    }
 }
 
 
