--- a/src/blocks/modalWindow/ModalWindow.module.css
+++ b/src/blocks/modalWindow/ModalWindow.module.css
@@ -47,6 +47,7 @@
         content: 'Select date';
         position: absolute;
         background-color: #fff;
+        width: 60%;
         height: 100%;
         display: flex;
         align-items: center;
