--- a/src/components/CityCart/CityCart.module.css
+++ b/src/components/CityCart/CityCart.module.css
@@ -6,6 +6,27 @@
     box-shadow: 0 0 1px 1px rgba(156, 156, 156, 0.1);
 }
 
+.selected {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: var(--width-size);
+    border-radius: 3px;
+    box-shadow: 0 0 5px 3px rgba(35, 10, 179, 0.1);
+    & .cross {
+        position: absolute;
+        top: 0px;
+        right: 5px;
+        font-size: 1.2rem;
+        color: red;
+        border-radius: 50%;
+        cursor: pointer;
+        &:hover {
+            transform: scale(1.1, 1.1);
+        }
+    }
+}
+
 .tripDescription {
     display: flex;
     flex-direction: column;
@@ -25,29 +46,9 @@
     width: 100%;
     max-width: var(--width-size);
     min-height: var(--width-size);
+    max-height: var(--width-size);
     & img {
         width: 100%;
         height: 100%;
-    }
-}
-
-.selected {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: var(--width-size);
-    border-radius: 3px;
-    box-shadow: 0 0 5px 3px rgba(35, 10, 179, 0.1);
-    & .cross {
-        position: absolute;
-        top: 0px;
-        right: 5px;
-        font-size: 1.2rem;
-        color: red;
-        border-radius: 50%;
-        cursor: pointer;
-        &:hover {
-            transform: scale(1.1, 1.1);
-        }
     }
 }
